4.3.1 New feature:
      - srcipts/grep-logs.sh now detects duplicate results and ignores them

      Bug fixes:
      - Removed duplicate upload of interesting two-term test finds

4.3  New features:
     - Support for reference mass ratios (rmr) outside radical
     - More options for controlling verbosity of status output
     - New configuration option nle_mixing_polarity for 2-term with (1-smr) mode.   Status updates now indicate polarity
     - Setting phase1_random_samples_enable to 'no' now also causes phase1 to be run just once instead of continuously
     - phase1 now uses a 64-bit random number generator derived from https://www.pcg-random.org/posts/does-it-beat-the-minimal-standard.html. This
       may replace drand48() completely in future releases

     Bug fixes:
     - Phase 2 valid result test now accounts for the relative uncertainty of the outputs when comparing their distance to the relative uncertainty of the experimental values
     - Fixed bug in srcipts/grep-logs.sh that was writing meta refresh line to wrong file
     - selectOutputs() rewritten and now checks that both the primary reference mass is floated in 2-term modes and highest uncertainty
       solution mass is also floated in (1-smr) mode
     - phase 1 has better unsolvable formula detection algorithms.  Config option 'phase1_mc_samples_limit' can now be used to control one of these

4.2  New features: 
     - Added support for (1-smr) mode. Enable by setting smrfactor_1minus_enable=yes and nle_mode=2.  Negative exponents
         are disabled in this mode, term1 must have an odd exponent (for when 1-smr is negative), and both terms will use the same smr including reference mass.
     - Added support for two additional user-supplied factors for outside radical for total of three
     - Added phase1_random_samples_enable option.  When set to "no" variables are all set to center of experimental range each time phase 1 is run